crates/bijux-dna-domain-fastq/tests/snapshots/bijux-dna-domain-fastq__contracts__stage_contract__fastq_trim_terminal_damage.snap
---
source: crates/bijux-dna-domain-fastq/tests/contracts/stage_contract_snapshots.rs
assertion_line: 20
expression: "bijux_dna_testkit::snapshot_normalize_json(&json)"
---
{
  "amplicon_semantics": {
    "aligner_compatibility": "refuse_if_requested_output_breaks_downstream_expectations",
    "damage_policy": "terminal_mask_or_trim",
    "udg_classification": "configured_or_inferred"
  },
  "inputs": {
    "kind": "SingleEnd"
  },
  "metrics": {
    "classes": [
      "Integrity",
      "Retention"
    ],
    "invariants": [
      "reads_out <= reads_in",
      "bases_out <= bases_in",
      "counts are non-negative"
    ],
    "notes": "Damage-aware pretrim can mask or trim terminal damage while preserving deterministic output order."
  },
  "outputs": {
    "emits_fastq": true,
    "kind": "SingleEnd"
  },
  "retention": {
    "definition": "reads_out / reads_in; bases_out / bases_in",
    "may_drop": [
      "reads",
      "bases"
    ],
    "may_drop_reads": true,
    "must_preserve_pairing": true,
    "preserves": [
      "read_order",
      "pairing_metadata"
    ],
    "units": "reads,bases"
  },
  "schema_version": "bijux.stage_contract.v1",
  "stage_id": "fastq.trim_terminal_damage",
  "tool_ids": [
    "cutadapt",
    "seqkit"
  ]
}
